turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: object java.awt.Color is not a value
    setCouleurBrosse(Color)
                     ^LangtonsAnt:11: error: Boolean does not take parameters
  else (getCouleurSol==Color.black){
                                   ^